# UniverseSim

./: .gitattributes  CMakeLists.txt  README.markdown
shaders/: varying.def.sc
shaders/compute/: buffer_copier.sc  entity_adder.sc  gravity.sc  integration.sc  readback_single.sc  simple_compute.sc  verlet_position.sc  verlet_velocity.sc
shaders/fragment/: universe.sc
shaders/vertex/: universe.sc
src/: main.cpp
src/Core/: Application.cpp  Application.hpp  ApplicationConfig.hpp
src/Debug/: MetalCapture.h  MetalCapture.mm
src/GPU/: BufferManager.cpp  BufferManager.hpp  ComputeBridge.cpp  ComputeBridge.hpp
src/Simulation/: EntityManager.cpp  EntityManager.hpp  Simulation.cpp  Simulation.hpp  Stopwatch.hpp
src/UI/: CameraHandler.cpp  CameraHandler.hpp  GUI.cpp  GUI.hpp  InputHandler.cpp  InputHandler.hpp  Render.cpp  Render.hpp
tests/: CMakeLists.txt  Core.test.cpp  EntityManagement.test.cpp  GPU.test.cpp  Simulation.test.cpp  tests.cpp
tests/SimulationLoop/: EntityControlAndBufferManagement.test.cpp  Inputs.test.cpp
